--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <img src="https://site-criativo-alura.vercel.app/alurastart%20logo.png" width="350">
       <h1>Meu site</h1>
       <nav>
         <ul>
