--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Meu site</title>
+    <title>Macacos Lindos</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
@@ -9,11 +9,11 @@
   <body>
     <header>
       <img src="https://site-criativo-alura.vercel.app/alurastart%20logo.png" width="350">
-      <h1>Meu site</h1>
+      <h1>Macacos</h1>
       <nav>
         <ul>
           <li><a href="#">Página inicial</a></li>
-          <li><a href="#">Sobre nós</a></li>
+          <li><a href="#">Sobre Macacos</a></li>
           <li><a href="#">Contato</a></li>
         </ul>
       </nav>
