--- a/index.html
+++ b/index.html
@@ -1,38 +1,101 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Macacos Lindos</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <header>
-      <img src="https://site-criativo-alura.vercel.app/alurastart%20logo.png" width="350">
-      <h1>Macacos</h1>
-      <nav>
-        <ul>
-          <li><a href="#">Página inicial</a></li>
-          <li><a href="#">Sobre Macacos</a></li>
-          <li><a href="#">Contato</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section>
-        <h2>Seja bem-vindo</h2>
-        <p>Este é o meu site. Sinta-se à vontade para explorar.</p>
-      </section>
-      <section>
-        <h2>Últimas notícias</h2>
-        <ul>
-          <li><a href="#">Novo produto lançado</a></li>
-          <li><a href="#">Nova atualização do software</a></li>
-        </ul>
-      </section>
-    </main>
-    <footer>
-      <p>&copy; 2023 Meu Site. Todos os direitos reservados.</p>
-    </footer>
-  </body>
+<head>
+	<title>Canjicona do Pai</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+
+	<div id="area-cabecalho">
+		
+		<div id="area-logo">
+			<h1>Can<span class="branco">Jica</span></h1>
+		</div>
+		<div id="area-menu">
+			<a href="index.html">Home</a>
+			<a href="">Quais tipos que existem?</a>
+			<a href="">Quando Surgiu?</a>
+			<a href="">Onde Surgiu?</a>
+		</div>
+
+	</div>
+
+	<div id="area-principal">
+
+		<div id="area-postagens">
+			
+			<!-- abertura postagem -->
+			<div class="postagem">
+				<h2>Como Fazer?</h2>
+				<img width="620px" src="img1.jpg">
+				<p>
+					Ingredientes
+				</p>
+				<ul>
+					<li>500g de canjica branca</li>
+					<li>1 litro de leite</li>
+					<li>1 lata de leite condensado</li>
+					<li>1/2 xícara de açúcar</li>
+					<li>1 colher de sopa de canela em pó</li>
+					<li>1/2 colher de sopa de cravo-da-índia em pó</li>
+					<li>1/4 de xícara de coco ralado</li>
+				</ul>
+				<a href="">Leia mais</a>
+			</div><!--// fechamento postagem -->
+
+			<!-- abertura postagem -->
+			<div class="postagem">
+				<img width="620px" src="img2.jpg">
+				<p>
+					Modo de Preparo
+				</p>
+				<ol>
+					<li>Lave a canjica em água corrente e deixe de molho por 4 horas.</li>
+					<li>Escorra a canjica e coloque em uma panela grande.</li>
+					<li>Adicione o leite, o leite condensado, o açúcar, a canela, o cravo-da-índia e o coco ralado.</li>
+					<li>Leve ao fogo médio e cozinhe, mexendo sempre, por cerca de 40 minutos, ou até que a canjica esteja macia e o caldo tenha engrossado.</li>
+					<li>Retire do fogo e sirva quente ou fria.</li>
+				</ol>
+				<a href="">Leia mais</a>
+			</div><!--// fechamento postagem -->
+
+		</div>
+		<div id="area-lateral">
+			
+
+			<div class="conteudo-lateral">
+				<h3>Postagens recentes</h3>
+				
+				<div class="postagem-lateral">
+					<p>Como fazer?</p>
+					<a href="">Leia mais</a>
+				</div>
+
+				<div class="postagem-lateral" style="border-bottom: none;">
+					<p>Ingredientes</p>
+					<a href="">Leia mais</a>
+				</div>
+
+			</div>
+
+			<div class="conteudo-lateral">
+				<h3>Categorias</h3>
+				
+				<a href="">Quais tipos que existem?</a><br>
+				<a href="">Quando Surgiu</a><br>
+				<a href="">Onde Surgiu?</a><br>
+
+			</div>
+
+
+		</div>
+
+		<div id="rodape">
+			Todos os direitos reservados
+		</div>
+
+	</div>
+
+</body>
 </html>
